不要なファイル削除。build.sbtに記述を追加